--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "bootstrap-vue": "^2.0.0-rc.22",
+    "bootstrap": "^4.3.1",
+    "file-loader": "^4.0.0",
+    "url-loader": "^2.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.8.0",
