--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "test:unit": "vue-cli-service test:unit"
+    "test:unit": "vue-cli-service test:unit",
+    "test": "jest"
   },
   "dependencies": {
     "vue": "^2.6.10",
     "bootstrap-vue": "^2.0.0-rc.22",
     "bootstrap": "^4.3.1",
     "file-loader": "^4.0.0",
-    "url-loader": "^2.0.0"
+    "url-loader": "^2.0.0",
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.8.0",
