--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "vue": "^2.6.10",
-    "bootstrap-vue": "^2.0.0-rc.22",
     "bootstrap": "^4.3.1",
+    "bootstrap-vue": "^2.0.0-rc.22",
+    "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "url-loader": "^2.0.0",
-    "express": "^4.17.1"
+    "vue": "^2.6.10"
   },
   "devDependencies": {
     "@vue/cli-plugin-eslint": "^3.8.0",
@@ -25,6 +25,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "jest": "^24.8.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
