--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "majak",
   "version": "0.1.1",
   "private": true,
+  "homepage": ".",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
