--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "test": "jest"
   },
   "dependencies": {
-    "bootstrap": "^4.3.1",
-    "bootstrap-vue": "^2.0.0-rc.22",
+    "bootstrap": "^4.5.2",
+    "bootstrap-vue": "^2.16.0",
     "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "url-loader": "^2.0.0",
@@ -26,7 +26,7 @@
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
-    "jest": "^24.8.0",
+    "jest": "^26.4.2",
     "node-sass": "^4.13.1",
     "sass-loader": "^7.1.0",
     "vue-template-compiler": "^2.6.10"
